--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About Me</title>
 </head>
-<link rel="stylesheet" href="/css//aboutme.css">
+<link rel="stylesheet" href="/css/aboutme.css">
 
 <body>
     <header class="header">
@@ -17,7 +17,7 @@
         </div>
         <div class="right">
             <ul class="navbar">
-                <li> <a href="/html/index.html"><strong>Home</strong></a></li>
+                <li> <a href="/index.html"><strong>Home</strong></a></li>
                 <li> <a href="https://iul.ac.in/About/Overview/Overview.aspx" target="_blank"><strong>University</strong></a></li>
                 <li> <a href="/html/aboutme.html" target="_blank"><strong>About Me</strong></a></li>
             </ul>
@@ -47,7 +47,7 @@
 
     </div>
     <div class="btn" align="center">
-        <a class="button" href="/html/index.html">Go to Home</a>
+        <a class="button" href="/index.html">Go to Home</a>
     </div>
 
 
