--- a/html/universityinfrastructure.html
+++ b/html/universityinfrastructure.html
@@ -17,7 +17,7 @@
         </div>
         <div class="right">
             <ul class="navbar">
-                <li> <a href="/html/index.html"><strong>Home</strong></a></li>
+                <li> <a href="/index.html"><strong>Home</strong></a></li>
                 <li> <a href="https://iul.ac.in/About/Overview/Overview.aspx" target="_blank"><strong>University</strong></a></li>
                 <li> <a href="/html/aboutme.html" target="_blank"><strong>About Me</strong></a></li>
             </ul>
