--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -19,7 +19,7 @@
             <ul class="navbar">
                 <li> <a href="/index.html"><strong>Home</strong></a></li>
                 <li> <a href="https://iul.ac.in/About/Overview/Overview.aspx" target="_blank"><strong>University</strong></a></li>
-                <li> <a href="/html/aboutme.html" target="_blank"><strong>About Me</strong></a></li>
+                <li> <a href="aboutme.html" target="_blank"><strong>About Me</strong></a></li>
             </ul>
         </div>
         <div class="line">
