--- a/html/assignment1.html
+++ b/html/assignment1.html
@@ -28,12 +28,10 @@
         <div class="line">
         </div>
     </header>
-
+    <h1 align="center" id="heading">Assignment 1</h1>
+    <div class="line2"></div>
     <div class="assignment">
         <br>
-        <h1 align="center" id="heading">Assignment 1</h1>
-        <div class="line2">
-        </div>
         <h3>1. Create a webpage with HTML describing your department. Use paragraph and list tags.
         </h3>
         <p><strong>A.</strong><a target="_blank" href="/html/department.html"> Click here </a>to see the magic.</p>
