--- a/html/embeddedVideoAndAudio.html
+++ b/html/embeddedVideoAndAudio.html
@@ -11,31 +11,29 @@
             font-family: 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
         }
         .video {
-            margin-top: 50px;
+            margin-top: 35px;
         }
         .audio{
             margin-top: 50px;
         }
         #vid {
-            margin-top: 20px;
             border-radius: 18px;
         }
         #aud {
-            margin-top: 20px;
+            margin-top: 40px;
         }
         .line2 {
-            margin-left: 700px;
-            margin-right: 700px;
+            width: 150px;
+            margin: auto;
             border-top: 3px solid#5ab3e3;
-            margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
+    <h1 align="center" >Embedded Video</h1>
+        <div class="line2"></div>
     <div class="video" align="center">
-        <h1>Embedded Video</h1>
-        <div class="line2">
-        </div>
+        
         <iframe id="vid" width="95%" height=600 src="https://www.youtube.com/embed/9bjqTwbAgS8?autoplay=1&mute=1"
             title="Diversity at Integral University - A Global University in Lucknow, India" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -43,8 +41,7 @@
     </div>
     <div class="audio" align="center">
         <h1>Embedded Audio</h1>
-        <div class="line2">
-        </div>
+        <div class="line2"> </div>
         <iframe id="aud" style="border-radius:18px" src="https://open.spotify.com/embed/track/1mRSA7bk3iEvAyKLXHL7bi?utm_source=generator" width="95%" height="380" frameBorder="0" allowfullscreen="" allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
     </div>
 </body>
