--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
         </div>
         <div class="right">
             <ul class="navbar">
-                <li> <a href="/index.html"><strong>Home</strong></a></li>
+                <li> <a href="index.html"><strong>Home</strong></a></li>
                 <li> <a href="https://iul.ac.in/About/Overview/Overview.aspx" target="_blank"><strong>University</strong></a></li>
-                <li> <a href="/html/aboutme.html" target="_blank"><strong>About Me</strong></a></li>
+                <li> <a href="html/aboutme.html" target="_blank"><strong>About Me</strong></a></li>
             </ul>
         </div>
         <div class="line"> </div>
     </header>
     <div align="center">
-        <img id="web" align="center"src="/img/web.png" alt="web design">
+        <img id="web" align="center"src="img/web.png" alt="web design">
     </div>
         <div class="div" align="center">
-            <img class="bg" src="/img/bgbg.png" alt="assignments">
+            <img class="bg" src="img/bgbg.png" alt="assignments">
             <br>
             <br>
             <br>
             <hr id="hr">
             <br> 
             <p class="textbody">This portal is made specifically for  assignments of<br> <strong>CA 304 - Web Designing Concepts</strong>
-            <br><br><a class="button" href="/html/assignment1.html">Go to Assignment 1</a></p>
+            <br><br><a class="button" href="html/assignment1.html">Go to Assignment 1</a></p>
         </div>
 </body >
 </html>
