--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <div class="line"> </div>
     </header>
     <div align="center">
-        <img id="web" align="center"src="img/web.png" alt="web design">
+        <!-- <img id="web" align="center"src="/" alt="web design"> -->
+        <img id="web" src="img/web.png" alt="web design">
     </div>
         <div class="div" align="center">
             <img class="bg" src="img/bgbg.png" alt="assignments">
