--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
 
         <div class="left">
-            <a target="_blank" href="https://www.iul.ac.in/"><img src="/img/uniLogo.png" alt="logo"></a>
+            <a target="_blank" href="https://www.iul.ac.in/"><img src="img/uniLogo.png" alt="logo"></a>
         </div>
         <div class="right">
             <ul class="navbar">
@@ -25,7 +25,6 @@
         <div class="line"> </div>
     </header>
     <div align="center">
-        <!-- <img id="web" align="center"src="/" alt="web design"> -->
         <img id="web" src="img/web.png" alt="web design">
     </div>
         <div class="div" align="center">
