--- a/html/assignment1.html
+++ b/html/assignment1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Assignment 1</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
+    <link rel="font" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
 </head>
 <link rel="stylesheet" href="/css/assignment1.css">
 
