--- a/assignment1.html
+++ b/assignment1.html
@@ -8,21 +8,21 @@
     <title>Assignment 1</title>
     <link rel="font" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
 </head>
-<link rel="stylesheet" href="/css/assignment1.css">
+<link rel="stylesheet" href="css/assignment1.css">
 
 <body>
 
     <header class="header">
 
         <div class="left">
-            <a target="_blank" href="https://www.iul.ac.in/"><img src="/img/uniLogo.png" alt="logo"></a>
+            <a target="_blank" href="https://www.iul.ac.in/"><img src="img/uniLogo.png" alt="logo"></a>
         </div>
         <div class="right">
             <ul class="navbar">
-                <li> <a href="/index.html"><strong>Home</strong></a></li>
+                <li> <a href="index.html"><strong>Home</strong></a></li>
                 <li> <a href="https://iul.ac.in/About/Overview/Overview.aspx"
                         target="_blank"><strong>University</strong></a></li>
-                <li> <a href="/html/aboutme.html" target="_blank"><strong>About Me</strong></a></li>
+                <li> <a href="html/aboutme.html" target="_blank"><strong>About Me</strong></a></li>
             </ul>
         </div>
         <div class="line">
