final changes made again

--- a/frameAssignment.html
+++ b/frameAssignment.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/frameAssignment.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
+    <link rel="stylesheet" href="css/frameAssignment.css">
 
 </head>
 <body>
@@ -30,7 +31,7 @@
 
         <h3>3. Create links on the words e.g. “Wi-Fi” and “LAN” to link them to Wikipedia pages.
         </h3>
-        <p><strong>A.</strong> <img class="wifi" src="/img/wifi.png" alt=""> <img class="lan" src="/img/lan.png" alt="">
+        <p><strong>A.</strong> <img class="wifi" src="img/wifi.png" alt="wifi"> <img class="lan" src="img/lan.png" alt="lan">
         </p>
         <a class="wifitext" href="https://en.wikipedia.org/wiki/Wi-Fi" target="_blank">Wi-Fi</a>
         <a class="lantext" href="https://en.wikipedia.org/wiki/Local_area_network" target="_blank">LAN</a><br>
@@ -38,14 +39,14 @@
         </h3>
         <p><strong>A.</strong> Click on the top left logo of Integral University. </p>
         <h3>5. Create a table to show your class time-table</h3>
-        <p><strong>A.</strong> <a href="/html/table.html">Click here</a> to see the table.</p>
+        <p><strong>A.</strong> <a href="table.html">Click here</a> to see the table.</p>
         <h3>6. Use tables to provide layout to your HTML page describing your university
             infrastructure.</h3>
-        <p><strong>A.</strong> <a href="/html/universityinfrastructure.html">Click here</a> to see university
+        <p><strong>A.</strong> <a href="universityinfrastructure.html">Click here</a> to see university
             infrastructure table.</p>
         <h3>7. Use frames such that page is divided into 3 frames 20% on left to show contents of pages,
             60% in center to show body of page, remaining on right to show remarks.</h3>
-        <p><strong>A.</strong> <a href="/html/frames.html">Click here</a> to to go the page.</p>
+        <p><strong>A.</strong> <a href="frames.html">Click here</a> to to go the page.</p>
     </div>
 </body>
 </html>
