--- a/table.html
+++ b/table.html
@@ -7,19 +7,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Table</title>
 </head>
-<link rel="stylesheet" href="/css/table.css">
+<link rel="stylesheet" href="css/table.css">
 
 <body>
     <header class="header">
 
         <div class="left">
-            <img src="/img/uniLogo.png" alt="logo">
+            <img src="img/uniLogo.png" alt="logo">
         </div>
         <div class="right">
             <ul class="navbar">
-                <li> <a href="/index.html"><strong>Home</strong></a></li>
+                <li> <a href="index.html"><strong>Home</strong></a></li>
                 <li> <a href="https://iul.ac.in/About/Overview/Overview.aspx" target="_blank"><strong>University</strong></a></li>
-                <li> <a href="/html/aboutme.html" target="_blank"><strong>About Me</strong></a></li>
+                <li> <a href="aboutme.html" target="_blank"><strong>About Me</strong></a></li>
             </ul>
         </div>
         <div class="line">
@@ -114,7 +114,7 @@
         </table><br>
     </div>
     <div align="center">
-        <br><br><a class="button" href="/html/assignment1.html">Go Back</a>
+        <br><br><a class="button" href="assignment1.html">Go Back</a>
     </div><br><br>
 
 </body>
