--- a/assignment1.html
+++ b/assignment1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Assignment 1</title>
-    <link rel="font" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
 </head>
 <link rel="stylesheet" href="css/assignment1.css">
 
@@ -22,7 +22,7 @@
                 <li> <a href="index.html"><strong>Home</strong></a></li>
                 <li> <a href="https://iul.ac.in/About/Overview/Overview.aspx"
                         target="_blank"><strong>University</strong></a></li>
-                <li> <a href="html/aboutme.html" target="_blank"><strong>About Me</strong></a></li>
+                <li> <a href="aboutme.html" target="_blank"><strong>About Me</strong></a></li>
             </ul>
         </div>
         <div class="line">
@@ -34,7 +34,7 @@
         <br>
         <h3>1. Create a webpage with HTML describing your department. Use paragraph and list tags.
         </h3>
-        <p><strong>A.</strong><a target="_blank" href="/html/department.html"> Click here </a>to see the magic.</p>
+        <p><strong>A.</strong><a target="_blank" href="department.html"> Click here </a>to see the magic.</p>
         <h3>2. Apply various colors to suitably distinguish key words. Also apply font styling like italics, underline
             and two other fonts to words you find appropriate. Also use header tags.
         </h3>
@@ -50,7 +50,7 @@
 
         <h3>3. Create links on the words e.g. “Wi-Fi” and “LAN” to link them to Wikipedia pages.
         </h3>
-        <p><strong>A.</strong> <img class="wifi" src="/img/wifi.png" alt=""> <img class="lan" src="/img/lan.png" alt="">
+        <p><strong>A.</strong> <img class="wifi" src="img/wifi.png" alt=""> <img class="lan" src="img/lan.png" alt="">
         </p>
         <a class="wifitext" href="https://en.wikipedia.org/wiki/Wi-Fi" target="_blank">Wi-Fi</a>
         <a class="lantext" href="https://en.wikipedia.org/wiki/Local_area_network" target="_blank">LAN</a><br>
@@ -58,22 +58,22 @@
         </h3>
         <p><strong>A.</strong> Click on the top left logo of Integral University. </p>
         <h3>5. Create a table to show your class time-table</h3>
-        <p><strong>A.</strong> <a href="/html/table.html">Click here</a> to see the magic.</p>
+        <p><strong>A.</strong> <a href="table.html">Click here</a> to see the magic.</p>
         <h3>6. Use tables to provide layout to your HTML page describing your university
             infrastructure.</h3>
-        <p><strong>A.</strong> <a href="/html/universityinfrastructure.html">Click here</a> to see the magic.</p>
+        <p><strong>A.</strong> <a href="universityinfrastructure.html">Click here</a> to see the magic.</p>
         <h3>7. Use frames such that page is divided into 3 frames 20% on left to show contents of pages,
             60% in center to show body of page, remaining on right to show remarks.</h3>
-        <p><strong>A.</strong> <a target="_blank" href="/html/frames.html">Click here</a> to see the magic.</p>
+        <p><strong>A.</strong> <a target="_blank" href="frames.html">Click here</a> to see the magic.</p>
         <h3>8. Embed Audio and Video into your HTML web page.</h3>
-        <p><strong>A.</strong> <a target="_blank" href="/html/embeddedVideoAndAudio.html">Click here</a> to see the
+        <p><strong>A.</strong> <a target="_blank" href="embeddedVideoAndAudio.html">Click here</a> to see the
             magic.</p>
         <h3>9. Change the background color of the frames.</h3>
-        <p><strong>A.</strong> <a target="_blank" href="/html/frames-bgcolorchanged.html">Click here</a> to see the
+        <p><strong>A.</strong> <a target="_blank" href="frames-bgcolorchanged.html">Click here</a> to see the
             magic.</p>
         <h3>10. Change the background color of the page. At the bottom create a link to take user to the top of the
             page. </h3>
-        <p><strong>A.</strong> <a target="_blank" href="/html/assignment1 copy.html">Click here</a> to see the magic.
+        <p><strong>A.</strong> <a target="_blank" href="assignment1 copy.html">Click here</a> to see the magic.
         </p><br><br>
         <div align="center"><a class="button" href="#top">Back to top</a> <br><br><br></div>
 
