final changes made

--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About Me</title>
 </head>
-<link rel="stylesheet" href="/css/aboutme.css">
+<link rel="stylesheet" href="css/aboutme.css">
 
 <body>
     <header class="header">
