--- a/assignment1 copy.html
+++ b/assignment1 copy.html
@@ -8,7 +8,7 @@
     <title>Assignment 1</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
 </head>
-<link rel="stylesheet" href="/css/assignment1 copy.css">
+<link rel="stylesheet" href="css/assignment1 copy.css">
 
 <body>
     <a name="top"></a>
