final changes made

--- a/aboutme.html
+++ b/aboutme.html
@@ -13,11 +13,11 @@
     <header class="header">
 
         <div class="left">
-            <a target="_blank" href="https://www.iul.ac.in/"><img src="/img/uniLogo.png" alt="logo"></a>
+            <a target="_blank" href="https://www.iul.ac.in/"><img src="img/uniLogo.png" alt="logo"></a>
         </div>
         <div class="right">
             <ul class="navbar">
-                <li> <a href="/index.html"><strong>Home</strong></a></li>
+                <li> <a href="index.html"><strong>Home</strong></a></li>
                 <li> <a href="https://iul.ac.in/About/Overview/Overview.aspx" target="_blank"><strong>University</strong></a></li>
                 <li> <a href="aboutme.html" target="_blank"><strong>About Me</strong></a></li>
             </ul>
@@ -32,22 +32,22 @@
 
     <div align="center" class="imgdiv">
 
-        <img id="aboutimg" src="/img/aboutImg.png" alt="aboutme">
+        <img id="aboutimg" src="img/aboutImg.png" alt="aboutme">
 
         <p id="nameline">Hi, I'm Mohd Ashfaq...</p>
         <p>I am a final year student of <em>Bachelor of Computer Applications</em> <br>program in Integral
             University.<br><br><br><br>Fifth semester<br><br><em>Group B<br><br>Enrollment No.<br>2000100269<br><br>Roll
                 No.<br>2001018146</em></p>
         <ul class="social">
-            <li><a target="_blank" href="https://www.facebook.com/ashfaaqaly"><img src="/img/facebook.jpg" alt="facebook"></a></li>
-            <li><a target="_blank" href="https://www.instagram.com/ashfaaqaly/"><img src="/img/instagram.jpg" alt="instagram"></a></li>
-            <li><a target="_blank" href="https://www.linkedin.com/in/mohdashfaq01/"><img src="/img/linkedin.jpg" alt="linkedin"></a></li>
-            <li><a target="_blank" href="https://twitter.com/baahubully"><img src="/img/twitter.jpg" alt="twitter"></a></li>
+            <li><a target="_blank" href="https://www.facebook.com/ashfaaqaly"><img src="img/facebook.jpg" alt="facebook"></a></li>
+            <li><a target="_blank" href="https://www.instagram.com/ashfaaqaly/"><img src="img/instagram.jpg" alt="instagram"></a></li>
+            <li><a target="_blank" href="https://www.linkedin.com/in/mohdashfaq01/"><img src="img/linkedin.jpg" alt="linkedin"></a></li>
+            <li><a target="_blank" href="https://twitter.com/baahubully"><img src="img/twitter.jpg" alt="twitter"></a></li>
         </ul>        
 
     </div>
     <div class="btn" align="center">
-        <a class="button" href="/index.html">Go to Home</a>
+        <a class="button" href="index.html">Go to Home</a>
     </div>
 
 
