--- a/assignment1 copy.html
+++ b/assignment1 copy.html
@@ -15,14 +15,14 @@
     <header class="header">
 
         <div class="left">
-            <a target="_blank" href="https://www.iul.ac.in/"><img src="/img/uniLogo.png" alt="logo"></a>
+            <a target="_blank" href="https://www.iul.ac.in/"><img src="img/uniLogo.png" alt="logo"></a>
         </div>
         <div class="right">
             <ul class="navbar">
-                <li> <a href="/index.html"><strong>Home</strong></a></li>
+                <li> <a href="index.html"><strong>Home</strong></a></li>
                 <li> <a href="https://iul.ac.in/About/Overview/Overview.aspx"
                         target="_blank"><strong>University</strong></a></li>
-                <li> <a href="/html/aboutme.html" target="_blank"><strong>About Me</strong></a></li>
+                <li> <a href="aboutme.html" target="_blank"><strong>About Me</strong></a></li>
             </ul>
         </div>
         <div class="line">
@@ -36,7 +36,7 @@
         </div>
         <h3>1. Create a webpage with HTML describing your department. Use paragraph and list tags.
         </h3>
-        <p><strong>A.</strong><a target="_blank" href="/html/department.html"> Click here </a>to see the magic.</p>
+        <p><strong>A.</strong><a target="_blank" href="department.html"> Click here </a>to see the magic.</p>
         <h3>2. Apply various colors to suitably distinguish key words. Also apply font styling like italics, underline
             and two other fonts to words you find appropriate. Also use header tags.
         </h3>
@@ -50,7 +50,7 @@
 
         <h3>3. Create links on the words e.g. “Wi-Fi” and “LAN” to link them to Wikipedia pages.
         </h3>
-        <p><strong>A.</strong> <img class="wifi" src="/img/wifi.png" alt=""> <img class="lan" src="/img/lan.png" alt="">
+        <p><strong>A.</strong> <img class="wifi" src="img/wifi.png" alt=""> <img class="lan" src="img/lan.png" alt="">
         </p>
         <a class="wifitext" href="https://en.wikipedia.org/wiki/Wi-Fi" target="_blank">Wi-Fi</a>
         <a class="lantext" href="https://en.wikipedia.org/wiki/Local_area_network" target="_blank">LAN</a><br>
@@ -58,19 +58,19 @@
         </h3>
         <p><strong>A.</strong> Click on the top left logo of Integral University. </p>
         <h3>5. Create a table to show your class time-table</h3>
-        <p><strong>A.</strong> <a href="/html/table.html">Click here</a> to see the magic.</p>
+        <p><strong>A.</strong> <a href="table.html">Click here</a> to see the magic.</p>
         <h3>6. Use tables to provide layout to your HTML page describing your university
             infrastructure.</h3>
-        <p><strong>A.</strong> <a href="/html/universityinfrastructure.html">Click here</a> to see the magic.</p>
+        <p><strong>A.</strong> <a href="universityinfrastructure.html">Click here</a> to see the magic.</p>
         <h3>7. Use frames such that page is divided into 3 frames 20% on left to show contents of pages,
             60% in center to show body of page, remaining on right to show remarks.</h3>
-        <p><strong>A.</strong> <a target="_blank" href="/html/frames.html">Click here</a> to see the magic.</p>
+        <p><strong>A.</strong> <a target="_blank" href="frames.html">Click here</a> to see the magic.</p>
         <h3>8. Embed Audio and Video into your HTML web page.</h3>
-        <p><strong>A.</strong> <a target="_blank" href="/html/embeddedVideoAndAudio.html">Click here</a> to see the magic.</p>
+        <p><strong>A.</strong> <a target="_blank" href="embeddedVideoAndAudio.html">Click here</a> to see the magic.</p>
         <h3>9. Change the background color of the frames.</h3>
-        <p><strong>A.</strong> <a target="_blank" href="/html/frames-bgcolorchanged.html">Click here</a> to see the magic.</p>
+        <p><strong>A.</strong> <a target="_blank" href="frames-bgcolorchanged.html">Click here</a> to see the magic.</p>
         <h3>10. Change the background color of the page. At the bottom create a link to take user to the top of the page. </h3>
-        <p><strong>A.</strong> <a target="_blank" href="/html/frames-bgcolorchanged.html">Click here</a> to see the magic.</p>
+        <p><strong>A.</strong> <a target="_blank" href="frames-bgcolorchanged.html">Click here</a> to see the magic.</p>
         
     </div>
 
