--- a/frameAboutMe.html
+++ b/frameAboutMe.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/frameAboutMe.css">
+    <link rel="stylesheet" href="css/frameAboutMe.css">
 
 </head>
 <body>
@@ -16,17 +16,17 @@
 
     <div align="center" class="imgdiv">
 
-        <img id="aboutimg" src="/img/aboutImg.png" alt="aboutme">
+        <img id="aboutimg" src="img/aboutImg.png" alt="aboutme">
 
         <p id="nameline">Hi, I'm Mohd Ashfaq...</p>
         <p>I am a final year student of <em>Bachelor of Computer Applications</em> <br>program in Integral
             University.<br><br><br><br>Fifth semester<br><br><em>Group B<br><br>Enrollment No.<br>2000100269<br><br>Roll
                 No.<br>2001018146</em></p>
         <ul class="social">
-            <li><a target="_blank" href="https://www.facebook.com/ashfaaqaly"><img src="/img/facebook.jpg" alt="facebook"></a></li>
-            <li><a target="_blank" href="https://www.instagram.com/ashfaaqaly/"><img src="/img/instagram.jpg" alt="instagram"></a></li>
-            <li><a target="_blank" href="https://www.linkedin.com/in/mohdashfaq01/"><img src="/img/linkedin.jpg" alt="linkedin"></a></li>
-            <li><a target="_blank" href="https://twitter.com/baahubully"><img src="/img/twitter.jpg" alt="twitter"></a></li>
+            <li><a target="_blank" href="https://www.facebook.com/ashfaaqaly"><img src="img/facebook.jpg" alt="facebook"></a></li>
+            <li><a target="_blank" href="https://www.instagram.com/ashfaaqaly/"><img src="img/instagram.jpg" alt="instagram"></a></li>
+            <li><a target="_blank" href="https://www.linkedin.com/in/mohdashfaq01/"><img src="img/linkedin.jpg" alt="linkedin"></a></li>
+            <li><a target="_blank" href="https://twitter.com/baahubully"><img src="img/twitter.jpg" alt="twitter"></a></li>
         </ul>        
 
     </div>
