--- a/frames.html
+++ b/frames.html
@@ -15,7 +15,7 @@
     <header class="header">
 
         <div class="left">
-            <a target="_blank" href="https://www.iul.ac.in/"><img src="/img/uniLogo.png" alt="logo"></a>
+            <a target="_blank" href="https://www.iul.ac.in/"><img src="img/uniLogo.png" alt="logo"></a>
         </div>
         <div class="right">
             <ul class="navbar">
