--- a/frameAssignment.html
+++ b/frameAssignment.html
@@ -39,14 +39,14 @@
         </h3>
         <p><strong>A.</strong> Click on the top left logo of Integral University. </p>
         <h3>5. Create a table to show your class time-table</h3>
-        <p><strong>A.</strong> <a href="table.html">Click here</a> to see the table.</p>
+        <p><strong>A.</strong> <a target="_blank" href="table.html">Click here</a> to see the table.</p>
         <h3>6. Use tables to provide layout to your HTML page describing your university
             infrastructure.</h3>
-        <p><strong>A.</strong> <a href="universityinfrastructure.html">Click here</a> to see university
+        <p><strong>A.</strong> <a target="_blank" href="universityinfrastructure.html">Click here</a> to see university
             infrastructure table.</p>
         <h3>7. Use frames such that page is divided into 3 frames 20% on left to show contents of pages,
             60% in center to show body of page, remaining on right to show remarks.</h3>
-        <p><strong>A.</strong> <a href="frames.html">Click here</a> to to go the page.</p>
+        <p><strong>A.</strong> <a target="_blank" href="frames.html">Click here</a> to to go the page.</p>
     </div>
 </body>
 </html>
