--- a/aboutme.html
+++ b/aboutme.html
@@ -36,8 +36,19 @@
 
         <p id="nameline">Hi, I'm Mohd Ashfaq...</p>
         <p>I am a final year student of <em>Bachelor of Computer Applications</em> <br>program in Integral
-            University.<br><br><br><br>Fifth semester<br><br><em>Group B<br><br>Enrollment No.<br>2000100269<br><br>Roll
-                No.<br>2001018146</em></p>
+            University.<br><br>
+            <br><br>Fifth semester<br>
+            <em>
+                <br>Group B<br>
+                <br>Enrollment No.
+                <br>2000100269<br>
+                <br>Roll No.
+                <br>2001018146<br>
+                <br>Submitted to
+                <br><a id="submittedto" target="_blank" href="https://nashrajaved.github.io/Resume/">Nashra Javed Ma'am</a>
+            </em>
+            
+        </p>
         <ul class="social">
             <li><a target="_blank" href="https://www.facebook.com/ashfaaqaly"><img src="img/facebook.jpg" alt="facebook"></a></li>
             <li><a target="_blank" href="https://www.instagram.com/ashfaaqaly/"><img src="img/instagram.jpg" alt="instagram"></a></li>
