--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <br> 
             <p class="textbody">This portal is made specifically for  assignments of<br> <strong>CA 304 - Web Designing Concepts</strong>
             <br><br><a class="button" href="assignment1.html">Go to Assignment 1</a></p>
+            <a class="button2" href="Assignment 2/assignment2.html">Go to Assignment 2</a></p>
         </div>
 </body >
 </html>
